--- a/Code/Code.ioc
+++ b/Code/Code.ioc
@@ -1,28 +1,47 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32G441KBT6
 Mcu.Family=STM32G4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM8
-Mcu.IP5=USB
-Mcu.IPNb=6
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI3
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM8
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32G441KBTx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA11
-Mcu.Pin1=PA12
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=PB6
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_SYS_VS_DBSignals
-Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin8=VP_TIM8_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin0=PA0
+Mcu.Pin1=PA1
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_SYS_VS_DBSignals
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA11
+Mcu.Pin5=PA12
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PA15
+Mcu.Pin9=PB3
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G441KBTx
@@ -38,7 +57,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
+PA1.Mode=IN2-Single-Ended
+PA1.Signal=ADC1_IN2
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -47,6 +71,20 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Mode=NSS_Signal_Hard_Output
+PA15.Signal=SPI3_NSS
+PA2.Mode=IN3-Single-Ended
+PA2.Signal=ADC1_IN3
+PA3.Locked=true
+PA3.Mode=IN4-Single-Ended
+PA3.Signal=ADC1_IN4
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI3_SCK
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI3_MISO
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI3_MOSI
 PB6.Locked=true
 PB6.Signal=S_TIM8_CH1
 PinOutPanel.RotationAngle=0
@@ -77,7 +115,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
 RCC.APB1Freq_Value=160000000
@@ -123,8 +161,25 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=320000000
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI3.CLKPolarity=SPI_POLARITY_LOW
+SPI3.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI3.CalculateBaudRate=40.0 MBits/s
+SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize,BaudRatePrescaler,CLKPolarity,CRCCalculation,NSSPMode
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.NSSPMode=SPI_NSS_PULSE_ENABLE
+SPI3.VirtualNSS=VM_NSSHARD
+SPI3.VirtualType=VM_MASTER
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.IPParameters=Channel-PWM Generation1 CH1
+USB.IPParameters=battery_charging_enable
+USB.battery_charging_enable=ENABLE
+USB_DEVICE.CLASS_NAME_FS=HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Hid
+USB_DEVICE.VirtualModeFS=Hid_FS
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
@@ -133,4 +188,6 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
 board=custom
